# Easy-versioning-sphinx

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Easy_versioning/: __init__.py  main.py
Easy_versioning/builders/: __init__.py  footer_builder.py  markdown_processor.py  output_organizer.py  sphinx_builder.py
Easy_versioning/core/: __init__.py  config.py  version_manager.py  workspace.py
Easy_versioning/data/: footer.html  footer.md
Easy_versioning/src/V. 1.0/English/: conf.py
Easy_versioning/src/V. 2.0/Deutsch/: index.md
Easy_versioning/utils/: __init__.py  file_operations.py  logger.py  server_manager.py
Example/data/: footer.md
Example/src/V. 1.0/English/: index.md
Example/src/V. 1.0/Italiano/: index.md
Example/src/V. 2.0/Deutsch/: FAQ_and_common_problems.md  index.md  install_and_use.md
Example/src/V. 2.0/English/: FAQ_and_common_problems.md  index.md  install_and_use.md
Example/src/V. 2.0/Italiano/: FAQ_and_common_problems.md  conf.py  index.md  install_and_use.md
Tests/: __init__.py  test_config.py  test_utils.py
data/: .gitignore
src/V. 2.0/English/: index.md
src/V. 2.0/Italiano/: conf.py
